# DB_MCP_server

./: .gitignore  README.md  docker-compose.yml  env.example  logger_config.py  main.py  pyproject.toml  pytest.ini  server.py
agent/: __init__.py  data_analyst_agent.py  data_simple_agent.py  plan_execute_replan_agent.py  prompts.py
data_pipeline/: 01_build_metadata.py  02_get_online_dic.py  03_get_redash_query.py  04_upload_redash_queries.py  upload_failed.json
db/: __init__.py  analytics_config.py  analytics_models.py  analytics_service.py  database.py  example.py  init_db.py  models.py
db_mcp/: __init__.py  connection_pool.py  errors.py  logger.py  resource.py  server.py  sql_validator.py  tool.py
docs/: DATA_ANALYST_AGENT.md  ENV_CONFIG.md  LOGGING.md  PROJECT_SUMMARY.md  openapi.yaml
evaluation/: eval_questions.json  evaluation.md
executors/: __init__.py  base.py  mock_executor.py  mysql_executor.py  redash_executor.py
knowledge/: __init__.py  base.py  lightrag_client.py  metadata.py  online_dictionary.py
metadata/: online_dictionary.json  singa_bi_metadata.json
resources/: __init__.py  base.py  db_resources.py  metadata_resources.py
tests/: __init__.py  run_tests.py  test_basic.py  test_concurrency.py  test_connection_pool.py  test_data_analyst.py  test_errors.py  test_executors.py  test_knowledge_modules.py  test_logger.py  test_mcp_client.py  test_mock_agent.py  test_sql_validator.py  test_tools.py  test_tools_integration.py
tools/: README.md  __init__.py  analyst_tools.py  base.py  db_tools.py  execute_sql_tool.py  get_table_schema_tool.py  (+1 more)
(+2 files in other folders)
